# diffpilot

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  mcp-config.example.json  pyproject.toml
.github/: copilot-setup-steps.yml
.github/workflows/: quality.yml
python/diffpilot/: __init__.py  __main__.py  server.py
src/: lib.rs
tests/: test_server.py
