[project]
name = "diffpilot"
version = "0.1.0"
description = "Structured diff tool MCP server — Python layer with Rust diff parsing core"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.11",
    "cryptography>=46.0.7",
    "fastmcp>=3.2.0",
    "python-multipart>=0.0.27",
]

[project.scripts]
diffpilot = "diffpilot.server:run"

[dependency-groups]
dev = [
    "maturin>=1.8",
    "pip-audit>=2.9.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "diffpilot._core"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["FBT001", "FBT002", "S603", "G004", "S607", "COM812", "PLR0912"]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN", "T201"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-args = 8

[tool.coverage.run]
source = ["diffpilot"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
